списки переписал в ul>li

--- a/src/templates/result/result.html
+++ b/src/templates/result/result.html
@@ -14,14 +14,15 @@
                 </div>
             </div>
         </div>
-        <div class="result" if.bind="$parent.friends">
-
-            <a class="friend" if.bind="$parent.friends.length" repeat.for="fr of $parent.friends" href="#users/${fr.id}" css="opacity: ${0.7 + frOpacity*fr.uid.length}" if.bind="fr.name != undefined">
-                <section class="name">${fr.name} | </section>
-                <section class="age">День рождения: ${fr.date}</section>
-                <section class="gender"> ${fr.sex}</section>
-                <section class="friends">Друзья среди добавленных: ${fr.uid.length}</section>
-            </a>
-        </div>
+        <ul class="result" if.bind="$parent.friends.length" if.bind="$parent.friends">
+            <li class="friend" repeat.for="fr of $parent.friends" css="opacity: ${0.7 + frOpacity*fr.uid.length}" if.bind="fr.name != undefined">
+                <a href="#users/${fr.id}">
+                    <section class="name">${fr.name} | </section>
+                    <section class="age">День рождения: ${fr.date}</section>
+                    <section class="gender"> ${fr.sex}</section>
+                    <section class="friends">Друзья среди добавленных: ${fr.uid.length}</section>
+                </a>
+            </li>
+        </ul>
     </div>
 </template>
