--- a/src/templates/users/users.html
+++ b/src/templates/users/users.html
@@ -4,9 +4,11 @@
             <div class="back">
                 <a href="#">${user.info.last_name} ${user.info.first_name}</a>
             </div>
-            <div class="friends-row">
-                <a class="box" repeat.for="fr of user.friends" href="#users/${fr.uid}">${fr.last_name} ${fr.first_name}</a>
-            </div>
+                <ul class="friends-row">
+                   <li class="box" repeat.for="fr of user.friends">
+                        <a href="#users/${fr.uid}">${fr.last_name} ${fr.first_name}</a>
+                    </li>
+                </ul>
         </div>
         <div class="colomn-r">
             <div class="vk-logo">
