--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,10 @@ input {
     display: block;
 }
 
+ul {
+    list-style: none;
+}
+
 router-view {
     transition: all 0.3s;
 }
@@ -346,10 +350,14 @@ body .blur * {
 }
 
 .colomn-r .wall {
-    padding: 5px;
+    padding: 0;
     margin: 0px 10%;
     width: 80%;
+    word-break: break-all;
+}
+
+.colomn-r .wall .box {
     border: 1px solid #c3cbd4;
     margin-bottom: 11px;
-    word-break: break-all;
+    padding: 5px;
 }
