--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,35 +1,3 @@
-html,
-body {
-    margin: auto;
-    height: 100%;
-}
-
-button[type="submit"] {
-    display: block;
-    background: #67b967;
-    border: none;
-    border-radius: 3px;
-    padding: 7px;
-    color: #fff;
-    box-shadow: 0px 0px 2px 0px black;
-    outline: none;
-    cursor: pointer;
-    transition: all 0.3s;
-}
-
-button[type="submit"]:hover {
-    background: #5da75d;
-}
-
-button[type="submit"]:active {
-    background: #6b9c6b;
-}
-
-input {
-    outline: none;
-    display: block;
-}
-
 ul {
     list-style: none;
 }
@@ -38,157 +6,13 @@ router-view {
     transition: all 0.3s;
 }
 
-.box-fre {
-    display: block;
-    margin: 0px 10%;
+.search {
+  text-align: center;
+}
+.search input[name="id"] {
+  width: 500px;
 }
 
-.box-fre button[type="submit"] {
-    border-radius: 0;
-    margin-bottom: 3px;
-}
-
-.box-fre .boxes {
-    padding: 5px;
-    min-height: 30px;
-    border: 1px solid #aaa;
-}
-
-.box-fre .boxes .box {
-    width: auto;
-    background: #ededed;
-    padding: 6px;
-    padding-left: 20px;
-    position: relative;
-    display: inline-block;
-    border-radius: 5px;
-    color: #000;
-    border: 1px solid #aaa;
-    margin: 3px 3px;
-}
-
-.box-fre .boxes .box section {
-    font-size: 1.1em;
-}
-
-.box-fre .boxes .box .close {
-    position: absolute;
-    margin: auto;
-    left: 4px;
-    bottom: 0;
-    top: 0;
-    width: 14px;
-    height: 14px;
-    cursor: pointer;
-}
-
-.box-fre .boxes .box .close:after,
-.box-fre .boxes .box .close:before {
-    content: "";
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    background: #aaa;
-    margin-top: 7px;
-    transition: all 0.5s;
-}
-
-.box-fre .boxes .box .close:after {
-    transform: rotate(45deg);
-}
-
-.box-fre .boxes .box .close:before {
-    transform: rotate(-45deg);
-}
-
-.box-fre .boxes .box .close:hover:after,
-.box-fre .boxes .box .close:hover:before {
-    background: #000;
-}
-
-form.search {
-    margin: auto;
-    width: auto;
-    max-width: 500px;
-    width: 60%;
-}
-
-form.search label[for="id"] em {
-    font-size: 1.1em;
-}
-
-form.search input[name="id"] {
-    padding: 3px;
-    box-sizing: border-box;
-    width: 100%;
-    font-size: 1.3em;
-}
-
-form.search button[type="submit"] {
-    float: right;
-    margin-top: 2px;
-    font-size: 0.9em;
-    min-width: 240px;
-}
-
-.result {
-    display: table;
-    margin: auto;
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
-    position: relative;
-    margin: 20px 10%;
-    padding: 0;
-}
-
-.result .friend {
-    border: 1px solid #8c8c7d;
-    position: relative;
-    cursor: pointer;
-    display: table;
-    box-sizing: border-box;
-    padding: 5px;
-    height: 40px;
-    width: 100%;
-    margin: 6px 0px;
-    transition: all 0.3s;
-}
-.result .friend a { 
-    text-decoration: none;
-    color: #000;
-}
-
-.result .friend:hover {
-    opacity: 1 !important;
-}
-
-.result .friend .name {
-    float: left;
-}
-
-.result .friend .age {
-    float: right;
-    display: inline-block;
-}
-
-.result .friend .gender {
-    margin-top: 3px;
-}
-
-.adder {
-    min-height: 500px;
-    display: flex;
-    align-content: center;
-    flex-flow: wrap row;
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.adder form.search {
-    margin-bottom: 1%;
-}
 
 body .reload {
     opacity: 1
@@ -205,7 +29,7 @@ body .blur * {
 
 .reload {
     margin: 0;
-    transition: top 0.1s, opacity 0.3s;
+    transition: opacity 0.3s;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -234,6 +58,90 @@ body .blur * {
     width: 36px;
     height: 36px;
 }
+
+
+.box-fre {
+  display: block;
+  width: 80%;
+  margin: 0px 10%;
+}
+.box-fre button[type="submit"] {
+  border-radius: 0;
+}
+.box-fre .boxes {
+  margin: auto;
+  text-align: center;
+  display: block;
+  width: 100%;
+  min-height: 43px;
+  padding: 3px 0px;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+  -o-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+}
+.box-fre .boxes .box {
+  padding-left: 23px;
+  margin: 1px;
+  margin-top: 3px;
+  position: relative;
+}
+.box-fre .boxes .box .close {
+  position: absolute;
+  margin: auto;
+  left: 5px;
+  display: table;
+  bottom: 0;
+  top: 0;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.result {
+  list-style: none;
+  width: 80%;
+  margin: 0px 10%;
+  padding: 0;
+  box-sizing: border-box;
+}
+.result .friend {
+  border: 1px solid #8c8c7d;
+  position: relative;
+  cursor: pointer;
+  display: table;
+  box-sizing: border-box;
+  padding: 5px 0px;
+  min-height: 50px;
+  width: 100%;
+  margin: 5px 0px;
+  transition: all 0.3s;
+}
+.result .friend .name-sex {
+  text-align: left;
+}
+.result .friend .age {
+  text-align: right;
+}
+.result .friend a {
+  color: #000;
+}
+.result .friend:hover {
+  opacity: 1 !important;
+}
+
+.adder {
+  width: 100%;
+  margin-top: 13px;
+}
+.adder .box-fre {
+  margin-top: 1.6%;
+}
+
 
 .user {
     height: 100%;
