--- a/src/templates/users/users.html
+++ b/src/templates/users/users.html
@@ -1,22 +1,37 @@
 <template>
     <div class="user">
-        <div class="colomn-l">
+        <div class="column-l">
             <div class="back">
-                <a href="#">${user.info.last_name} ${user.info.first_name}</a>
+                <div class="name">
+                    <a href="#" class="close glyphicon glyphicon-remove"></a>
+                    <a href="https://vk.com/${user.info.domain}">${(!user.info.last_name ? 'Подождите' : '')} ${user.info.last_name} ${user.info.first_name}</a></div>
             </div>
-            <ul class="friends-row">
+            <ul class="list-unstyled friends nav nav-tabs nav-stacked">
                 <li class="box" repeat.for="fr of user.friends">
                     <a href="#users/${fr.uid}">${fr.last_name} ${fr.first_name}</a>
                 </li>
             </ul>
+            <small class="friends-count">Всего друзей: ${(user.friends.length ? user.friends.length-1 : '~~~')}</small>
         </div>
-        <div class="colomn-r">
-            <div class="vk-logo">
-                <img src="http://image.flaticon.com/icons/svg/25/25684.svg" alt="" />
+
+        <div class="column-r">
+            <div class="vk-logo col-md-12 col-sm-12 col-xs-12">
+                <a href="https://vk.com/${user.info.domain}">
+                    <img src="http://image.flaticon.com/icons/svg/25/25684.svg" alt="" />
+                </a>
             </div>
-            <ul class="wall">
-                <li repeat.for="wall of user.wall" if.bind="wall.text" class="box" innerhtml.bind="wall.text"></li>
+            <ul class="wall list-unstyled">
+                <li repeat.for="wall of user.wall" if.bind="wall.text" class="box">
+
+                    <!-- фото
+                    <div class="photo" repeat.for="photo of wall.attachments" if.bind="photo.type == 'photo' && photo.photo.src">
+                        <img src.bind="photo.photo.src_big" alt="">
+                    </div>-->
+
+                    <span innerhtml.bind="wall.text"></span>
+                </li>
             </ul>
+            <div class="walls-count col-md-12 col-xs-12 col-sm-12"><small>Всего постов: ${(user.wall.length ? user.wall.length-1+' из '+user.wall[0]: '~~~')}</small></div>
         </div>
     </div>
 </template>
